--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,36 +10,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.expand.test.testfeature.MainActivity">
 
-    <com.example.expand.test.testfeature.view.SpringScrollView
-        android:visibility="visible"
-        android:paddingLeft="30dp"
-        android:paddingRight="40dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="16404dp"
-                    android:background="#2cdada"
-                    android:textSize="25sp"
-                    android:textColor="#fff"
-                    android:text="我觉得嘛"/>
-
-            </LinearLayout>
-        </ScrollView>
-    </com.example.expand.test.testfeature.view.SpringScrollView>
-
     <com.example.expand.test.testfeature.view.TouchEventTestView
-        android:visibility="gone"
-        android:paddingLeft="30dp"
-        android:paddingRight="40dp"
+        android:visibility="visible"
+        android:background="#5199c9"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <com.example.expand.test.testfeature.view.MyView
@@ -73,4 +46,31 @@
             </LinearLayout>
         </ScrollView>
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <com.example.expand.test.testfeature.view.SpringScrollView
+        android:visibility="gone"
+        android:paddingLeft="30dp"
+        android:paddingRight="40dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="16404dp"
+                    android:background="#2cdada"
+                    android:textSize="25sp"
+                    android:textColor="#fff"
+                    android:text="我觉得嘛"/>
+
+            </LinearLayout>
+        </ScrollView>
+    </com.example.expand.test.testfeature.view.SpringScrollView>
+
 </RelativeLayout>
